--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-fastapi==0.115.12cls
+fastapi==0.115.12
 pydantic==2.11.4
 uvicorn==0.34.2
+jinja2==3.1.6
+authlib==1.5.2
+httpx==0.28.1
+itsdangerous==2.2.0
+pymysql==1.1.1
